update for Java 8