@@ -8,6 +8,7 @@ import org.isda.cdm.functions.AbstractFunctionTest;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -19,14 +20,14 @@ public class AppendDateToListImplTest extends AbstractFunctionTest {
 
     @Test
     void shouldAppend() {
-        List<Date> dateList = List.of(
+        List<Date> dateList = Arrays.asList(
                 DateImpl.of(2021, 5, 12),
                 DateImpl.of(2021, 5, 13),
                 DateImpl.of(2021, 5, 14));
 
         Date newVal = DateImpl.of(2021, 5, 15);
 
-        List<Date> expectedList = List.of(
+        List<Date> expectedList = Arrays.asList(
             DateImpl.of(2021, 5, 12),
                 DateImpl.of(2021, 5, 13),
                 DateImpl.of(2021, 5, 14),
@@ -43,7 +44,7 @@ public class AppendDateToListImplTest extends AbstractFunctionTest {
 
         Date newVal = DateImpl.of(2021, 5, 15);
 
-        List<Date> expectedList = List.of(
+        List<Date> expectedList = Arrays.asList(
                 DateImpl.of(2021, 5, 15));
 
         DateGroup actualList = func.evaluate(DateGroup.builder().setDates(dateList), newVal);
